test/trivial/shannon/readWriteComplex.chpl
var complexNumber: complex;
var numTestCases: integer = 8;
var i: integer = 0;

while (i <= numTestCases) {
  read(complexNumber);	
  writeln(complexNumber);	
}
